# eth-tutorial-simple-storage

./: Makefile  pyproject.toml
contracts/: SImpleStorage.sol
scripts/: deploy.py  read_value.py
tests/: test_simple_storage.py
